# dkspng_watchdogmanip

./: .gitignore  Cargo.toml  PLACEMENT.md  README.md  TESTME.md.txt  WORKING_CONCEPTS.txt  combined_inline_definition_macro_processor.md  index.txt  index1.txt
architectures/: README.md
concepts/: WORKING_CONCEPTS.txt
docs/: DATABASE_SETUP.md  NAVIGATION_ARCHITECTURE.md  PARSE_README.md  SOURCE_REFERENCE_FORMAT.md  TEST_FIXTURE_COVERAGE.md
docs/.obsidian/: appearance.json  community-plugins.json  workspace.json
docs/COMPOSER/: CHANGES_1.md  CHANGES_2.md  CHANGES_4.md  CHANGES_DOCS.md  CHNAGES_4.md  MACRO_PROCESSING_INLINE_UPDATE.md  SUPER_SHAPE_ENHANCER_GUIDE.md  SUPER_SHAPE_ORIG_NOTES.md
docs/Ideas/: nearest-switch-context.txt  update-invalidated-file-paths.txt
docs/Rules/: Inline Documentation.md  Live Testing with Debug Output Verification.md
docs/Scratch/: Algorithms-Ideas.txt  ChunkTaskSet0.txt  global.txt
examples/: ambiguous_macros.txt  file_events.jsonl  mock_history_events.jsonl  project_contexts.txt  watch_spec.json
missions/: README.md
slop/: README.md
slop/Architectures/: fake_parser.txt.txt
src/: lib.rs  main.rs
tests/: GLOSSARY.md  context.rs  database.rs  engine_fixture_tests.rs  history.rs  integrated_engines_tests.rs  parse.rs  walk.rs
workflows/: README.md  add-block-assembler.md  add-boundary-strategy.md  add-command-seed-strategy.md  add-context-module.md  add-database-domain.md  add-extractor.md  add-hierarchy-rule.md  add-integration-test.md  add-registry-command.md  add-seed-detector.md  pipeline-and-registries.md
(+140 files in other folders)
