[package]
name = "macro_os_engines_app"
version = "0.1.0"
edition = "2021"
description = "One modular Rust app combining parse, context, navigation, history, and watchdog engines."

[lib]
name = "macro_os_engines"
path = "src/lib.rs"

[[bin]]
name = "macro-os"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
globset = "0.4"
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
